--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -56,9 +55,9 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Wildan Wahyudin</h1>
-      <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Data Analytics Enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items=" BI Engineer Enthusiast, Solo Traveler"></span></p>
       <div class="social-links">
-        <a href="https://www.instagram.com/wildanwahyudeen" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/weewilldan" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.github.com/thisiswildanw/" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/wildanwahyudin" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
@@ -66,24 +65,6 @@
   </section><!-- End Hero -->
 
   </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <h3>Wildan Wahyudin</h3>
-
-      <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
