--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="https://www.instagram.com/weewilldan" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.github.com/thisiswildanw/" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.linkedin.com/in/wildanwahyudin" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.tiktok.com/@willyoutryit" class="linkedin"><i class="bx bxl-tiktok"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
