--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Wildan Wahyudin</h1>
-      <p>I'm <span class="typed" data-typed-items=" BI Engineer Enthusiast, Solo Traveler, Newbie Content Creator"></span></p>
+      <p>I'm <span class="typed" data-typed-items=" BI Engineer Enthusiast, Freelancer "></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/weewilldan" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.github.com/thisiswildanw/" class="github"><i class="bx bxl-github"></i></a>
